<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_print"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/buttonReceipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button"
                android:textAllCaps="false"
                android:text="@string/receipt"
                android:onClick="printReceipt" />
            <Button
                android:id="@+id/btn_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button"
                android:textAllCaps="false"
                android:text="@string/image"
                android:onClick="printImage" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sample_barcode"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/buttonBarcode1D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button"
                android:textAllCaps="false"
                android:text="@string/barcode_1d"
                android:onClick="print1DBarcode" />
            <Button
                android:id="@+id/buttonBarcode2D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button"
                android:textAllCaps="false"
                android:text="@string/barcode_2d"
                android:onClick="print2DBarcode" />
            <Button
                android:id="@+id/buttonBarcodeGS1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button"
                android:textAllCaps="false"
                android:text="@string/barcode_gs1"
                android:onClick="printGS1Databar" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/msr_mode_setting"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/buttonMsrTrack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button"
                android:textAllCaps="false"
                android:text="@string/track23"
                android:onClick="setMSRDoubleTrackMode" />
            <Button
                android:id="@+id/buttonMsrTrack3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button"
                android:textAllCaps="false"
                android:text="@string/track123"
                android:onClick="setMSRTripleTrackMode" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/buttonMsrCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button"
                android:textAllCaps="false"
                android:text="@string/msr_cancel"
                android:onClick="cancelMSRMode" />
            <Button
                android:id="@+id/buttonMsrClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button"
                android:textAllCaps="false"
                android:text="@string/msr_clear"
                android:onClick="clearMSRInfo" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/msr_1track"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView android:id="@+id/textViewTrack1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/msr_2track"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView android:id="@+id/textViewTrack2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/msr_3track"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView android:id="@+id/textViewTrack3"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</ScrollView>